--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -95,8 +95,8 @@
     <Compile Include="LevelGen\Terrains\Ground.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingDown.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingUp.cs" />
-    <Compile Include="UserInterfaces\GamePause.cs" />
-    <Compile Include="UserInterfaces\UIManager.cs" />
+    <Compile Include="Graphics\UI\GamePause.cs" />
+    <Compile Include="Graphics\UI\UIManager.cs" />
     <Compile Include="Sounds\Effects\SoundEffectListener.cs" />
     <Compile Include="Interfaces\Objects\States\IThwompState.cs" />
     <Compile Include="Objects\Enemies\Thwomp.cs" />
@@ -170,9 +170,9 @@
     <Compile Include="Controls\Scripts\StartScript.cs" />
     <Compile Include="Graphics\GraphicManager.cs" />
     <Compile Include="Theming\Player.cs" />
-    <Compile Include="UserInterfaces\GameWon.cs" />
-    <Compile Include="UserInterfaces\GameStart.cs" />
-    <Compile Include="UserInterfaces\GameOver.cs" />
+    <Compile Include="Graphics\UI\GameWon.cs" />
+    <Compile Include="Graphics\UI\GameStart.cs" />
+    <Compile Include="Graphics\UI\GameOver.cs" />
     <Compile Include="Interfaces\Containers\IContainer.cs" />
     <Compile Include="Interfaces\Containers\ISession.cs" />
     <Compile Include="Interfaces\Factories\ICommandFactory.cs" />
@@ -261,7 +261,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserInterfaces\HUD.cs" />
+    <Compile Include="Graphics\UI\HUD.cs" />
     <Compile Include="Theming\ScoreListener.cs" />
     <Compile Include="Sounds\SoundManager.cs" />
   </ItemGroup>
