--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -81,7 +81,7 @@
     <Compile Include="BaseClasses\Objects\BaseCollidableObject.cs" />
     <Compile Include="BaseClasses\Objects\BasePhysicalObject.cs" />
     <Compile Include="BaseClasses\Objects\BaseGameObject.cs" />
-    <Compile Include="BaseClasses\UserInterfaces\BaseUserInterface.cs" />
+    <Compile Include="BaseClasses\Graphics\UserInterfaces\BaseUserInterface.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseTimedState.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseState.cs" />
     <Compile Include="Controls\Commands\CursorDown.cs" />
@@ -95,8 +95,8 @@
     <Compile Include="LevelGen\Terrains\Ground.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingDown.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingUp.cs" />
-    <Compile Include="Graphics\UI\GamePause.cs" />
-    <Compile Include="Graphics\UI\UIManager.cs" />
+    <Compile Include="Graphics\UserInterfaces\GamePause.cs" />
+    <Compile Include="Graphics\UserInterfaces\UIManager.cs" />
     <Compile Include="Sounds\Effects\SoundEffectListener.cs" />
     <Compile Include="Interfaces\Objects\States\IThwompState.cs" />
     <Compile Include="Objects\Enemies\Thwomp.cs" />
@@ -164,15 +164,15 @@
     <Compile Include="Interfaces\Objects\ICamera.cs" />
     <Compile Include="Interfaces\IListener.cs" />
     <Compile Include="Interfaces\LevelGen\IGenerator.cs" />
-    <Compile Include="Interfaces\UserInterfaces\IUserInterface.cs" />
+    <Compile Include="Interfaces\Graphics\IUserInterface.cs" />
     <Compile Include="LevelGen\NoiseGenerators\PerlinNoiseGenerator.cs" />
     <Compile Include="Objects\Miscs\Camera.cs" />
     <Compile Include="Controls\Scripts\StartScript.cs" />
     <Compile Include="Graphics\GraphicManager.cs" />
     <Compile Include="Theming\Player.cs" />
-    <Compile Include="Graphics\UI\GameWon.cs" />
-    <Compile Include="Graphics\UI\GameStart.cs" />
-    <Compile Include="Graphics\UI\GameOver.cs" />
+    <Compile Include="Graphics\UserInterfaces\GameWon.cs" />
+    <Compile Include="Graphics\UserInterfaces\GameStart.cs" />
+    <Compile Include="Graphics\UserInterfaces\GameOver.cs" />
     <Compile Include="Interfaces\Containers\IContainer.cs" />
     <Compile Include="Interfaces\Containers\ISession.cs" />
     <Compile Include="Interfaces\Factories\ICommandFactory.cs" />
@@ -261,7 +261,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Graphics\UI\HUD.cs" />
+    <Compile Include="Graphics\UserInterfaces\HUD.cs" />
     <Compile Include="Theming\ScoreListener.cs" />
     <Compile Include="Sounds\SoundManager.cs" />
   </ItemGroup>
