--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -103,12 +103,12 @@
     <Compile Include="LevelGen\Terrains\Village.cs" />
     <Compile Include="LevelGen\Terrains\Sky.cs" />
     <Compile Include="Objects\Characters\ProtectionStates\Helmeted.cs" />
-    <Compile Include="Objects\Enemies\Beetle.cs" />
     <Compile Include="Objects\Enemies\BeetleStates\Defeated.cs" />
     <Compile Include="Objects\Enemies\BeetleStates\MovingShell.cs" />
     <Compile Include="Objects\Enemies\BeetleStates\NewlyMovingShell.cs" />
     <Compile Include="Objects\Enemies\BeetleStates\Normal.cs" />
     <Compile Include="Objects\Enemies\BeetleStates\Worn.cs" />
+    <Compile Include="Objects\Enemies\Bettle.cs" />
     <Compile Include="Objects\Enemies\KoopaStates\NewlyMovingShell.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingDown.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingUp.cs" />
