--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -100,7 +100,7 @@
     <Compile Include="LevelGen\Generators\Static.cs" />
     <Compile Include="LevelGen\Generators\Structures\Blocks.cs" />
     <Compile Include="LevelGen\Generators\Terrains\Plateau.cs" />
-    <Compile Include="LevelGen\Generators\Terrains\Tunnel.cs" />
+    <Compile Include="LevelGen\Generators\Structures\Tunnel.cs" />
     <Compile Include="LevelGen\Generators\Terrains\Plain.cs" />
     <Compile Include="LevelGen\Generators\Terrains\Forest.cs" />
     <Compile Include="LevelGen\Generators\Terrains\Sky.cs" />
