--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Controls\Commands\Select.cs" />
     <Compile Include="Interfaces\Objects\States\IThwompState.cs" />
     <Compile Include="Interfaces\Objects\States\IBeetleState.cs" />
+    <Compile Include="LevelGen\Generators\Terrains\Island.cs" />
     <Compile Include="LevelGen\NoiseGenerators\NoiseConverter.cs" />
     <Compile Include="LevelGen\Generators\Objects\Enemies.cs" />
     <Compile Include="LevelGen\Generators\Scroll.cs" />
