--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -92,6 +92,9 @@
     <Compile Include="Controls\Commands\Select.cs" />
     <Compile Include="Interfaces\Objects\States\IThwompState.cs" />
     <Compile Include="Interfaces\Objects\States\IBeetleState.cs" />
+    <Compile Include="LevelGen\Generators\None.cs" />
+    <Compile Include="LevelGen\Generators\Objects\Blocks.cs" />
+    <Compile Include="LevelGen\Generators\Objects\Backgrounds.cs" />
     <Compile Include="LevelGen\Generators\Terrains\Island.cs" />
     <Compile Include="LevelGen\NoiseGenerators\NoiseConverter.cs" />
     <Compile Include="LevelGen\Generators\Objects\Enemies.cs" />
@@ -410,9 +413,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="LevelGen\Generators\Contents\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <PropertyGroup>
